# raspimouse_navigation_2

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: debug_config.rviz  rviz_config.rviz
launch/: remote_desktop.launch  remote_robot.launch  run_amcl.launch  run_move_base.launch
param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
scripts/: enable_motors.py  hector_motors.py  motors_imu.py
